fixed fonts and got rid of whitespace

--- a/Personal/styles/styles.css
+++ b/Personal/styles/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 body{
     background-color: #f7ebe8;
 }
@@ -7,6 +9,7 @@ header{
     display: grid;
     grid-template-columns: 150px auto;
     grid-template-rows: 100px;
+    font-family: "Montserrat", serif;
 }
 
 .header-links{
@@ -29,25 +32,26 @@ header{
     margin: auto;
     grid-column-start: 2;
     padding-left: 5px;
+    font-family: "noto sans", sans-serif;
     font-size: larger;
 }
 
 #home-img{
     grid-column-start: 1;
+    grid-row: 1/2;
     padding: 10px;
     text-align: center;
     margin-top: auto;
     margin-bottom: auto;
+    font-size: 0;
 }
 
 #home-img img{
     max-width: 80%;
-    
 }
 
 footer{
     background-color: #c99cbf;;
-    margin-top: 200px;
     padding: 25px 50px;
     display: flex;
     justify-content: space-around;
